# Learn-Rust-4

./: Cargo.toml  ReadMe.md  abc.txt
Email/: bf2.py  bfemail.py  email.html  email.py  email2.html  working-final.py
src/: GenericIntro.rs  arrayTupleOwnership.rs  closures.rs  compilerDirective.rs  enums.rs  errorHandling.rs  exercise1.rs  exercise10.rs  exercise11.rs  exercise12.rs  exercise13.rs  exercise2.rs  exercise3.rs  exercise4.rs  exercise5.rs  exercise6.rs  exercise7.rs  exercise8.rs  exercise9.rs  generic.rs  hashMaap.rs  if-let-let-else.rs  iterationOverBytes.rs  lifetime.rs  lifetimeElision.rs  lifetimeGeneric.rs  methods.rs  option.rs  optionFromScratch.rs  ownership.rs  rangeType.rs  recursion.rs  result.rs  slices.rs  stringOp.rs  structs.rs  structsAndImpl.rs  traitAssociatedType.rs  traitObjects.rs  traits2.rs  (+5 more)
