[package]
name = "rust-4"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name="iterOverBytes"
path="src/iterationOverBytes.rs"

[[bin]]
name="struct"
path="src/structsAndImpl.rs"

[[bin]]
name="aliase"
path="src/typeAliase.rs"

[[bin]]
name="directive"
path="src/compilerDirective.rs"

[[bin]]
name="enum"
path="src/enums.rs"

[[bin]]
name="method"
path="src/methods.rs"

[[bin]]
name="ranges"
path="src/rangeType.rs"

[[bin]]
name="generics"
path="src/GenericIntro.rs"

[[bin]]
name="recursion"
path="src/recursion.rs"

[[bin]]
name="owner"
path="src/ownership.rs"