[package]
name = "rust-4"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name="iterOverBytes"
path="src/iterationOverBytes.rs"

[[bin]]
name="struct"
path="src/structsAndImpl.rs"

[[bin]]
name="aliase"
path="src/typeAliase.rs"

[[bin]]
name="directive"
path="src/compilerDirective.rs"


[[bin]]
name="method"
path="src/methods.rs"

[[bin]]
name="ranges"
path="src/rangeType.rs"

[[bin]]
name="generics"
path="src/GenericIntro.rs"

[[bin]]
name="recursion"
path="src/recursion.rs"

[[bin]]
name="owner"
path="src/ownership.rs"

[[bin]]
name="arrayOwner"
path="src/arrayTupleOwnership.rs"

[[bin]]
name="exe1"
path="src/exercise1.rs"

[[bin]]
name="slices"
path="src/slices.rs"

[[bin]]
name="exe2"
path="src/exercise2.rs"

[[bin]]
name="structs"
path="src/structs.rs"

[[bin]]
name="exe3"
path="src/exercise3.rs"

[[bin]]
name="enums"
path="src/enums.rs"

[[bin]]
name="iflet"
path="src/if-let-let-else.rs"

[[bin]]
name="exe4"
path="src/exercise4.rs"

[[bin]]
name="generic"
path="src/generic.rs"

[[bin]]
name="exe5"
path="src/exercise5.rs"

[[bin]]
name="option"
path="src/option.rs"

[[bin]]
name="optionfs"
path="src/optionFromScratch.rs"

[[bin]]
name="result"
path="src/result.rs"

[[bin]]
name="exe6"
path="src/exercise6.rs"

[[bin]]
name="vec"
path="src/vec.rs"